src/Tests/Error/DirectoryNotReadbleError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class DirectoryNotReadbleError extends AssertError
{
}
